clang/test/BSC/Negative/SafeZone/safe_arithmetic_conversion/safe_arithmetic_conversion.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Safe zone arithmetic conversion errors.

_Safe void test_float_to_int_forbidden(void) {
  double a = 1.2;
  int b = (int)a;       // expected-error {{conversion from type 'double' to 'int' is forbidden in the safe zone}}
  int c = (int)1.2;    // expected-error {{conversion from type 'double' to 'int' is forbidden in the safe zone}}
  float f = 1.0f;
  int d = (int)f;      // expected-error {{conversion from type 'float' to 'int' is forbidden in the safe zone}}
}

_Safe void test_implicit_int_to_double_forbidden(void) {
  int a = -1;
  double b = a;        // expected-error {{implicit conversion from type 'int' to 'double' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

_Safe void test_implicit_double_to_float_forbidden(void) {
  double a = 1.0;
  float b = a;         // expected-error {{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

_Safe void test_int_to_enum_forbidden(void) {
  enum E { ZERO, ONE, TWO };
  enum E num = ZERO;
  num = 0;             // expected-error {{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
}

_Safe void test_explicit_non_enum_to_enum_forbidden(void) {
  enum E { ZERO, ONE, TWO };
  int a = 1;
  float f = 1.0f;

  enum E from_var = (enum E)a;         // expected-error {{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
  enum E from_expr = (enum E)(a + 1);  // expected-error {{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
  enum E from_const = (enum E)0;       // expected-error {{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
  enum E from_float = (enum E)f;       // expected-error {{conversion from type 'float' to 'enum E' is forbidden in the safe zone}}
}

_Safe void test_enum_to_enum_when_dest_does_not_contain_source(void) {
  enum E { ZERO, ONE, TWO };
  enum G { G1, G2 };
  enum E num = ZERO;
  enum G g1 = (enum G)num;   // expected-error {{conversion from type 'enum E' to 'enum G' is forbidden in the safe zone}}
  g1 = (enum G)ZERO;         // expected-error {{conversion from type 'int' to 'enum G' is forbidden in the safe zone}} expected-note {{source type 'int' is implicit converted from type 'enum E'}}
}

_Safe void test_constant_out_of_range_implicit(void) {
  int c = 2147483648;        // expected-error {{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  unsigned int f = 0;
  f = 4294967296;            // expected-error {{implicit conversion from type 'long' to 'unsigned int' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

_Safe void test_literal_conversions_forbidden(void) {
  char c = 128;              // expected-error {{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  unsigned u = -1;           // expected-error {{implicit conversion from type 'int' to 'unsigned int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  float f = 1e40;            // expected-error {{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
  float g = 1e40 + 1e40;     // expected-error {{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

_Safe void test_literal_expression_conversions_forbidden(void) {
  int x = 2147483648l + 0l;  // expected-error {{implicit conversion from type 'long' to 'int' is forbidden in the safe zone; please use explicit cast or other means instead}}
  char c = 1 + 127;          // expected-error {{implicit conversion from type 'int' to 'char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  int big = 2147483647 + 1;  // expected-warning {{overflow in expression; result is -2147483648 with type 'int'}}
  float f = 1e40 + 2e40;     // expected-error {{implicit conversion from type 'double' to 'float' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

_Safe void test_bitwise_op_exceeds_range(void) {
  unsigned char flag = 0;
  flag = flag | 0x100;  // expected-error {{implicit conversion from type 'int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}

  // OR with constant that overflows unsigned short
  unsigned short flag2 = 0;
  flag2 = flag2 | 0x10000; // expected-error {{implicit conversion from type 'int' to 'unsigned short' is forbidden in the safe zone; please use explicit cast or other means instead}}

  // AND shortens the range, but still exceed the dest range
  flag = flag2 & 0x1FF; // expected-error {{implicit conversion from type 'int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}

  // Cast widens range beyond target
  flag2 = (unsigned int)flag2 | 0x100; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned short' is forbidden in the safe zone; please use explicit cast or other means instead}}

  // Wider variable OR'd into narrow target
  unsigned int w32 = 0;
  flag2 = w32 | 0x10; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned short' is forbidden in the safe zone; please use explicit cast or other means instead}}

  // XOR with wide operand
  flag = w32 ^ 0x01; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}

  // Non-constant operands: e1 OP e2 where neither is a constant expression
  flag = w32 | flag2; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  flag = w32 ^ flag2; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  flag = w32 & flag2; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  flag2 = w32 | flag2; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned short' is forbidden in the safe zone; please use explicit cast or other means instead}}
  flag2 = w32 ^ flag2; // expected-error {{implicit conversion from type 'unsigned int' to 'unsigned short' is forbidden in the safe zone; please use explicit cast or other means instead}}
  flag = flag2 | flag; // expected-error {{implicit conversion from type 'int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}
  flag = flag2 ^ flag; // expected-error {{implicit conversion from type 'int' to 'unsigned char' is forbidden in the safe zone; please use explicit cast or other means instead}}
}

int main(void) {
  test_float_to_int_forbidden();
  test_implicit_int_to_double_forbidden();
  test_implicit_double_to_float_forbidden();
  test_int_to_enum_forbidden();
  test_explicit_non_enum_to_enum_forbidden();
  test_enum_to_enum_when_dest_does_not_contain_source();
  test_constant_out_of_range_implicit();
  test_literal_conversions_forbidden();
  test_literal_expression_conversions_forbidden();
  test_bitwise_op_exceeds_range();
  return 0;
}
